# ryzen-ai-security-layer

./: COMPLETE_DIRECTORY_STRUCTURE.md  DEMO_VIDEO_SCRIPT.md  Dockerfile.all  Dockerfile.python  FINAL_PROJECT_SUMMARY.md  KERNEL_MODULES_SUMMARY.md  MASTER_FILE_INDEX.md  MULTILANGUAGE_ADDITIONS.md  MULTILANGUAGE_BUILD_GUIDE.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICK_START.md  README.md  docker-compose.yml  requirements.txt  setup.py
config/: logger.py  settings.py
cpp/: CMakeLists.txt
cpp/threat_engine/: phishing_detector.cpp  phishing_detector.hpp  python_bindings.hpp
demos/: demo_phishing_detection.py  threat_alert_demo.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  KERNEL_MODULE_GUIDE.md  MULTILANG_ARCHITECTURE.md
java/enterprise/: Dockerfile  pom.xml
java/enterprise/src/main/java/com/amd/security/: BehaviorAnalyzer.java  MalwareDetector.java  PhishingDetector.java  ThreatDetectionService.java
kernel/: Makefile  amd_security_lsm.c  build_modules.sh  netmon.c  syscall_monitor.c
rust/api/: Cargo.toml  Dockerfile
rust/api/src/: main.rs
src/explainability/: threat_explainer.py
src/hardware_acceleration/: onnx_runtime_manager.py  rocm_accelerator.py
src/security_core/: alert_manager.py  threat_engine.py
src/threat_detection/: behavior_analyzer.py  malware_detector.py  phishing_detector.py
